[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2022"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.83", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
