[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2022"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["serde", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }

[profile.release]
opt-level = "s"
